Update uncertainty measure names

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,31 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-12-12T06:56:39.576683Z",
+     "start_time": "2024-12-12T06:56:39.544745Z"
+    }
    },
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from autorank import autorank\n",
+    "#https://github.com/mirkobunse/critdd\n",
     "from critdd import Diagram\n",
     "\n",
-    "\n",
-    "data = pd.read_csv(\"./LGBM_prr_result_raw.csv\", sep=',')\n",
-    "#data = pd.read_csv(\"./totals_goodwill_raw.txt\", sep=',')\n",
+    "data = pd.read_csv(\"./LGBM_prr_result_total_raw.csv\", sep=',')\n",
+    "data = data.fillna(0)\n",
     "\n",
     "# Filter on certain metric\n",
-    "#data = data[(data[\"Metric\"] == \"MSE\") | (data[\"Metric\"] == \"ACC\")  ]\n",
+    "#data = data[data[\"Metric\"] == \"ACC\"  ]\n",
+    "data = data[(data[\"Metric\"] == \"ACC\") | (data[\"Metric\"] == \"MAE\") ]\n",
+    "#data = data[data[\"Metric\"] == METRIC ]\n",
     "\n",
     "\n",
-    "data = data.drop(columns = [\"Consensus (Leik)\",\"Binary (Margin)\"])\n",
     "\n",
+    "data = data.drop(columns = [\"$\\\\text{CONS}_{\\\\,C_1}$\",\"$\\\\text{ORD}_{\\\\,\\\\text{MARG}}$\"])\n",
+    "data = data.rename(columns={\"$R_{l_1}$\": \"$\\\\text{CONS}_{\\\\,C_1}$/$\\\\text{ORD}_{\\\\,\\\\text{MARG}}$/$R_{l_1}$\"})\n",
     "\n",
+    "data = data.drop(columns = [\"$\\\\text{CONS}_{\\\\,C_2}$\"])\n",
+    "data = data.rename(columns={\"$\\\\text{ORD}_{\\\\,\\\\text{VAR}}$\": \"$\\\\text{CONS}_{\\\\,C_2}$/$\\\\text{ORD}_{\\\\,\\\\text{VAR}}$\"})\n",
     "\n",
     "data = data.set_index([\"Dataset\",\"Metric\"])\n",
-    "\n",
-    "\n",
+    "\n"
+   ],
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T06:56:39.624071Z",
+     "start_time": "2024-12-12T06:56:39.576683Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "# https://github.com/mirkobunse/critdd\n",
     "# create a CD diagram from the Pandas DataFrame\n",
     "diagram = Diagram(\n",
@@ -44,23 +62,21 @@
     "    \"cd_result.tex\",\n",
     "    alpha = .05,\n",
     "    adjustment = \"holm\",\n",
-    "    reverse_x = True,\n",
-    "    axis_options = {\"title\": \"\"},\n",
-    ")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "result = autorank(data, alpha=.05, verbose=True, force_mode='nonparametric')\n",
-    "result.rankdf.sort_values(by=['meanrank'])[['meanrank','median','mad']].round(3).to_csv(\"ranks.txt\")\n"
+    "    reverse_x = False,\n",
+    "    axis_options = {\"title\": ''},\n",
+    ")"
    ],
-   "metadata": {
-    "collapsed": false
-   }
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Q454199\\projects\\uncertainty-quantification-probabilistic-ordinal-classification\\venv\\lib\\site-packages\\scipy\\stats\\_wilcoxon.py:199: UserWarning: Exact p-value calculation does not work if there are zeros. Switching to normal approximation.\n",
+      "  temp = _wilcoxon_iv(x, y, zero_method, correction, alternative, method, axis)\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   }
  ],
  "metadata": {
