--- a/stats.ipynb
+++ b/stats.ipynb
@@ -5,8 +5,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-12T06:56:39.576683Z",
-     "start_time": "2024-12-12T06:56:39.544745Z"
+     "end_time": "2025-01-14T08:15:15.672956Z",
+     "start_time": "2025-01-14T08:15:15.657640Z"
     }
    },
    "source": [
@@ -14,13 +14,16 @@
     "#https://github.com/mirkobunse/critdd\n",
     "from critdd import Diagram\n",
     "\n",
-    "data = pd.read_csv(\"./LGBM_prr_result_total_raw.csv\", sep=',')\n",
+    "data = pd.read_csv(\"./results/LGBM/prr_result_total_raw.csv\", sep=',')\n",
     "data = data.fillna(0)\n",
     "\n",
     "# Filter on certain metric\n",
-    "#data = data[data[\"Metric\"] == \"ACC\"  ]\n",
+    "#data = data[(data[\"Metric\"] == \"ACC\") | (data[\"Metric\"] == \"MAE\") | (data[\"Metric\"] == \"MSE\") ]\n",
+    "#data = data[(data[\"Metric\"] == \"MSE\") | (data[\"Metric\"] == \"MAE\") ]\n",
+    "#data = data[data[\"Metric\"] == 'MSE' ]\n",
+    "#data = data[data[\"Metric\"] == 'MAE' ]\n",
     "data = data[(data[\"Metric\"] == \"ACC\") | (data[\"Metric\"] == \"MAE\") ]\n",
-    "#data = data[data[\"Metric\"] == METRIC ]\n",
+    "#data = data[data[\"Metric\"] == 'ACC' ]\n",
     "\n",
     "\n",
     "\n",
@@ -34,13 +37,13 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T06:56:39.624071Z",
-     "start_time": "2024-12-12T06:56:39.576683Z"
+     "end_time": "2025-01-14T08:15:15.735344Z",
+     "start_time": "2025-01-14T08:15:15.674956Z"
     }
    },
    "cell_type": "code",
@@ -76,7 +79,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 4
   }
  ],
  "metadata": {
